deps/v8/test/message/fail/import-redeclaration.out
*%(basename)s:6: SyntaxError: Identifier 'foo' has already been declared
import { foo } from "mod";
         ^^^
SyntaxError: Identifier 'foo' has already been declared
